--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portal-canales-ingetes",
+  "name": "portal-clientes-ingetes",
   "private": true,
   "version": "1.0.0",
   "scripts": {
