--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "react": "^18.3.1",
   "react-dom": "^18.3.1",
   "jszip": "^3.10.1",
-  "file-saver": "^2.0.5"
+  "file-saver": "^2.0.5",
+  "jspdf": "^2.5.1"
 },
 "devDependencies": {
   "vite": "^5.4.0",
